--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,31 +20,22 @@ jobs:
         include:
           - dir: Dockerfiles/trixie
             image: trixie
-            tags: trixie latest
           - dir: Dockerfiles/trixie/slim
             image: slim-trixie
-            tags: slim-trixie slim
           - dir: Dockerfiles/bookworm
             image: bookworm
-            tags: bookworm
           - dir: Dockerfiles/bookworm/slim
             image: slim-bookworm
-            tags: slim-bookworm
           - dir: Dockerfiles/bullseye
             image: bullseye
-            tags: bullseye
           - dir: Dockerfiles/bullseye/slim
             image: slim-bullseye
-            tags: slim-bullseye
           - dir: Dockerfiles/alpine3.22
             image: alpine3.22
-            tags: alpine3.22 alpine
           - dir: Dockerfiles/alpine3.21
             image: alpine3.21
-            tags: alpine3.21
           - dir: Dockerfiles/alpine3.20
             image: alpine3.20
-            tags: alpine3.20
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
@@ -63,6 +54,10 @@ jobs:
           flavor: |
             latest=false
           tags: |
+            type=raw,value=latest,enable=${{ matrix.image == 'trixie' }}
+            type=raw,value=alpine,enable=${{ matrix.image == 'alpine3.22' }}
+            type=raw,value=slim,enable=${{ matrix.image == 'slim-trixie' }}
+            type=raw,value=${{ matrix.image }}
             type=semver,pattern={{version}},suffix=-${{ matrix.image }}
             type=semver,pattern={{version}},suffix=-alpine,enable=${{ matrix.image == 'alpine3.22' }}
             type=semver,pattern={{version}},suffix=-slim,enable=${{ matrix.image == 'slim-trixie' }}
@@ -77,7 +72,7 @@ jobs:
           context: ${{ matrix.dir }}
           file: ./Dockerfile
           push: false
-          tags: ${{ steps.meta.outputs.tags }} ${{ matrix.tags }}
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
 #      - name: Generate artifact attestation
