--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,16 +7,11 @@ on:
       - 'v*'
 
 jobs:
-  push_to_registry:
-    name: Push Docker image to Docker Hub
-    runs-on: ubuntu-latest
-    permissions:
-      packages: write
-      contents: read
-      attestations: write
-      id-token: write
+  release:
+    name: Release Docker image
     strategy:
       matrix:
+        os: [ubuntu-latest, ubuntu-24.04-arm]
         include:
           - dir: Dockerfiles/trixie
             image: trixie
@@ -36,6 +31,12 @@ jobs:
             image: alpine3.21
           - dir: Dockerfiles/alpine3.20
             image: alpine3.20
+    runs-on: ${{ matrix.os }}
+    permissions:
+      packages: write
+      contents: read
+      attestations: write
+      id-token: write
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
