--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,25 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, ubuntu-24.04-arm]
-        include:
-          - dir: Dockerfiles/trixie
-            image: trixie
-          - dir: Dockerfiles/trixie/slim
-            image: slim-trixie
-          - dir: Dockerfiles/bookworm
-            image: bookworm
-          - dir: Dockerfiles/bookworm/slim
-            image: slim-bookworm
-          - dir: Dockerfiles/bullseye
-            image: bullseye
-          - dir: Dockerfiles/bullseye/slim
-            image: slim-bullseye
-          - dir: Dockerfiles/alpine3.22
-            image: alpine3.22
-          - dir: Dockerfiles/alpine3.21
-            image: alpine3.21
-          - dir: Dockerfiles/alpine3.20
-            image: alpine3.20
+        image: [trixie, bookworm, bullseye, slim-trixie, slim-bookworm, slim-bullseye, alpine3.22, alpine3.21, alpine3.20]
     runs-on: ${{ matrix.os }}
     permissions:
       packages: write
@@ -70,7 +52,7 @@ jobs:
         id: push
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
-          context: ${{ matrix.dir }}
+          context: images/${{ matrix.image }}
           push: false
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
