--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,13 +53,13 @@ jobs:
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
           context: images/${{ matrix.image }}
-          push: false
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-#      - name: Generate artifact attestation
-#        uses: actions/attest-build-provenance@v3
-#        with:
-#          subject-name: index.docker.io/veryllang/veryl
-#          subject-digest: ${{ steps.push.outputs.digest }}
-#          push-to-registry: true
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v3
+        with:
+          subject-name: index.docker.io/veryllang/veryl
+          subject-digest: ${{ steps.push.outputs.digest }}
+          push-to-registry: true
