--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,8 +11,9 @@ jobs:
     name: Release Docker image
     strategy:
       matrix:
+        os: [ubuntu-latest, ubuntu-24.04-arm]
         image: [trixie, bookworm, bullseye, slim-trixie, slim-bookworm, slim-bullseye, alpine3.22, alpine3.21, alpine3.20]
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     permissions:
       packages: write
       contents: read
@@ -51,7 +52,6 @@ jobs:
         id: push
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
-          platforms: linux/amd64,linux/arm64
           context: images/${{ matrix.image }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
